# squash-ladder

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
client/: BUILD  Dockerfile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/public/: index.html
client/src/: AddMatchForm.tsx  AddPlayerForm.tsx  App.css  App.tsx  PlayerList.css  PlayerList.tsx  RecentMatches.tsx
client/src/grpc/: BUILD  ladderService.ts  playersService.ts
k8s/: client.yaml  server.yaml
scripts/: deploy_k8s.sh  dev_local.sh  gen_protos.sh  setup.sh
server/: BUILD  Dockerfile  go.mod  go.sum  model.go  model_test.go  run.go  service.go  service_test.go
server/cmd/server/: main.go
server/cmd/verify/: main.go
server/cmd/verify_recent/: main.go
server/handlers/: ladder.go  players.go  service.go
server/model/: model.go
server/proto/: BUILD  ladder.proto  players.proto  storage.proto
