module(
    name = "squash_ladder",
    version = "0.1.0",
)

# Core build rules
bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "rules_nodejs", version = "6.6.2")
bazel_dep(name = "aspect_rules_js", version = "2.8.1")
bazel_dep(name = "aspect_rules_ts", version = "3.7.1")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_proto_grpc_js", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.0")

single_version_override(
    module_name = "rules_go",
    version = "0.49.0",
)

single_version_override(
    module_name = "gazelle",
    version = "0.36.0",
)

# Go toolchain configuration
go = use_extension("@rules_go//go:extensions.bzl", "go")
go.toolchain(version = "1.23.0")
use_repo(go, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//server:go.mod")
use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_improbable_eng_grpc_web",
    "com_github_icza_backscanner",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# Node.js toolchain configuration
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.0")
use_repo(node, "nodejs")

# NPM dependencies configuration
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npm_package_lock = "//client:package-lock.json",
    verify_node_modules_ignored = "//client:.bazelignore",
)
use_repo(npm, "npm", "rules_proto_grpc_js_npm")

# TypeScript configuration
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(ts_version_from = "//client:package.json")
use_repo(rules_ts_ext, "npm_typescript")
